@@ -25,20 +25,12 @@
  */
 
 require './config.php';
+
 require_once 'includes/functions/functions_print_lists.php';
 
 print_header($pgv_lang['shared_note_list']);
-
 echo '<div class="center"><h2>'.$pgv_lang['shared_note_list'].'</h2>';
-if (PGV_USER_CAN_EDIT) {
-?>
-<?php print_help_link("edit_add_unlinked_note_help", "qm"); ?><a href="javascript: <?php print $pgv_lang["add_unlinked_note"]; ?>" onclick="addnewnote(''); return false;"><?php print $pgv_lang["add_unlinked_note"]; ?></a>
-<?php
-}
 print_note_table(get_note_list(PGV_GED_ID));
-
 echo '</div>';
-echo "<br /><br />";
-
 print_footer();
 ?>
